# EtE_ML_Project

./: .gitignore  Project_Plan.txt  main.py  pyproject.toml  requirements.txt  setup.py  test.py
dataset/: exp_notebook.ipynb  mongoDB.ipynb
src/exception/: __init__.py
